scrollbar style added & theme selector bug fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,15 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+::-webkit-scrollbar{
+  width: 7px;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+::-webkit-scrollbar-thumb {
+  background-color: #313244;
+  outline: 1px solid #1e1e2e;
+  border-radius: 15px;
+}
